updates to deploy to heroku

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
                 ID
             </th>
             <th>
-                First Name
+                F-Name
             </th>
             <th>
-                Last Name
+                L-Name
             </th>
             <th>
                 Email ID
